# smedia

./: .gitignore  settings.gradle
app/: build.gradle
eglDemo/src/main/cpp/: CMakeLists.txt
eglDemo/src/main/cpp/gles/: EGLCore.cpp  EGLCore.h  GLContext.cpp  GLContext.h  Program.cpp  Program.h  RenderCore.cpp  RenderCore.h  Shader.cpp  Shader.h
eglDemo/src/main/cpp/jni/: EGL_JNI.cpp
eglDemo/src/main/cpp/render/: EffectManager.cpp  EffectManager.h  IFilter.cpp  IFilter.h  LightFilter.cpp  LightFilter.h  OESTexReaderFilter.cpp  OESTexReaderFilter.h
eglDemo/src/main/cpp/util/: Logger.cpp  Logger.h  util.cpp  util.h
framework/src/main/cpp/: CMakeLists.txt  framework.cpp
framework/src/main/cpp/biz/: MyExpander.cpp  MyExpander.h
framework/src/main/cpp/framework/: graph.md
framework/src/main/cpp/functors/: AdjustColorFunctor.cpp  AdjustColorFunctor.h  AndroidBaseFunctor.cpp  AndroidBaseFunctor.h  BeautyFunctor.cpp  BeautyFunctor.h  BrightnessFunctor.cpp  BrightnessFunctor.h  BufferLoader.cpp  BufferLoader.h  CallbackFunctor.cpp  CallbackFunctor.h  ContrastFunctor.cpp  ContrastFunctor.h  DeNoiseFunctor.cpp  DeNoiseFunctor.h  DispatchFunctor.cpp  DispatchFunctor.h  GLImageReaderFunctor.cpp  GLImageReaderFunctor.h  HighLightShadowFunctor.cpp  HighLightShadowFunctor.h  IGLRenderFunctor.cpp  IGLRenderFunctor.h  ImageLoader.cpp  ImageLoader.h  ImageSourceFunctor.cpp  ImageSourceFunctor.h  OESTexReaderFunctor.cpp  OESTexReaderFunctor.h  RenderFunctor.cpp  RenderFunctor.h  SaturationFunctor.cpp  SaturationFunctor.h  SharpenFunctor.cpp  SharpenFunctor.h  WhiteBalanceFunctor.cpp  WhiteBalanceFunctor.h
framework/src/main/cpp/gl/: EGLCore.cpp  EGLCore.h  GLBufferFrame.cpp  GLBufferFrame.h  GLContext.cpp  GLContext.h  GLFrame.cpp  GLFrame.h  GLTexture.cpp  GLTexture.h  GLTexturePool.cpp  GLTexturePool.h  GLThread.cpp  IFrame.cpp  IFrame.h  ImageFrame.cpp  ImageFrame.h  Program.cpp  Program.h  Render.cpp  Render.h  Texture.cpp  Texture.h
(+177 files in other folders)
